# ViT_TSP

./: README.md
vit_fp16_taylor/: CMakeLists.txt  README.md  build.sh  convert_model.py  download_model.py
vit_fp16_taylor/include/: vit.h
vit_fp16_taylor/src/: image_processing_improved.c  main.c  model_loader_v2.c  vit.c
vit_fp32/: CMakeLists.txt
vit_fp32/include/: vit.h
vit_fp32/src/: main.c  vit.c
